feat: add github icon & link

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -15,12 +15,13 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="mml"
-          progress={{text: "(In progress) Web dev project", color: "text-pink-500"}}
+          progress={{text: "(Pre-alpha) Web dev project", color: "text-pink-500"}}
           title="MyManhwaList"
           description="Discover Manhwa reading lists"
           tools={['Next.js / React', 'Strapi', 'Tailwind CSS', 'Framer Motion']}
           url="https://mymanhwalist-next.vercel.app"
           url_text="View Project"
+          github_url="https://github.com/ricafolio/mymanhwalist-next"
         />
 
         <Project
@@ -31,6 +32,7 @@ import Project from '../components/Project.astro';
           tools={['Visual Studio Code', 'Theme', 'Package']}
           url="https://marketplace.visualstudio.com/items?itemName=ricafolio.orangey-vscode-theme"
           url_text="Download extension"
+          github_url="https://github.com/ricafolio/orangey-vscode-theme"
         />
 
         <Project
@@ -41,6 +43,7 @@ import Project from '../components/Project.astro';
           tools={['React', 'SASS', 'Vite']}
           url="https://github.com/ricafolio/box-transform-visualizer"
           url_text="View Project"
+          github_url="https://github.com/ricafolio/box-transform-visualizer"
         />
 			</div>
 
@@ -55,6 +58,7 @@ import Project from '../components/Project.astro';
           tools={['HTML', 'CSS', 'jQuery', 'Jekyll']}
           url="https://usechef.com/"
           url_text="View Project"
+          github_url={null}
         />
 
         <Project
@@ -65,6 +69,7 @@ import Project from '../components/Project.astro';
           tools={['Nuxt.js / Vue.js', 'Strapi', 'Discord API', 'Twitter API', 'SEO']}
           url="https://web.archive.org/web/20221207025634/https://wenmint.io/"
           url_text="View archived page"
+          github_url={null}
         />
 
         <Project
@@ -75,6 +80,7 @@ import Project from '../components/Project.astro';
           tools={['Discord.js', 'Node.js', 'Twitter API']}
           url="https://top.gg/bot/1006311461175443526"
           url_text="View archived page"
+          github_url={null}
         />
 
         <Project
@@ -85,6 +91,7 @@ import Project from '../components/Project.astro';
           tools={['Nuxt.js', 'Strapi', 'Twitter OAuth']}
           url="https://twitter.com/search?q=cultofeth.xyz&src=typed_query&f=live"
           url_text="View campaign results"
+          github_url={null}
         />
       </div>
 		</main>
