--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,7 +1,8 @@
 ---
 import ExternalIcon from "./icons/External.astro";
+import GithubIcon from "./icons/Github.astro";
 
-const { img_file_name, progress, title, description, tools, url, url_text } = Astro.props;
+const { img_file_name, progress, title, description, tools, url, url_text, github_url } = Astro.props;
 ---
 <section class="w-full md:w-6/12 mb-12 md:mb-6">
   <div class="bg-zinc-900 p-5 md:mr-4 rounded-md">
@@ -22,17 +23,20 @@ const { img_file_name, progress, title, description, tools, url, url_text } = As
 
       <div class="mt-1 mb-3">
         {tools.map((tool: String) => {
-          return <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1 mr-1">{tool}</span>
+          return <span class="inline-block bg-zinc-800 rounded select-none py-3 px-5 mt-1 mr-1">{tool}</span>
         })}
       </div>
 
-      <div>
-        <a href={url} target="_blank" rel="nofollow" class="inline-block border border-zinc-800 hover:border-zinc-400 ease-in duration-150 rounded py-3 px-5">
+      <div class="flex items-center">
+        <a href={url} target="_blank" rel="nofollow" class="inline-block border border-zinc-700 hover:border-zinc-400 ease-in duration-150 rounded py-3 px-5">
           <span class="flex items-center justify-center">
             <span>{url_text}</span>
             <ExternalIcon />
           </span>
         </a>
+        {github_url && <a href={github_url} target="_blank" class="ml-2 inline-block border border-zinc-700 hover:border-zinc-400 ease-in duration-150 rounded py-2 px-5">
+          <GithubIcon color="#fff" />
+        </a>}
       </div>
     </div>
   </div>
