--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -22,19 +22,19 @@ const { img_file_name, progress, title, description, tools, url, url_text, githu
       </div>
 
       <div class="mt-1 mb-3">
-        {tools.map((tool: String) => {
-          return <span class="inline-block bg-zinc-800 rounded select-none py-3 px-5 mt-1 mr-1">{tool}</span>
+        {tools.map((tool: String, i) => {
+          return <span class="inline-block select-none py-2 mt-1 mr-1">{tool} {i !== (tools.length -1) && <span class="text-gray-600 px-3">/</span>}</span>
         })}
       </div>
 
       <div class="flex items-center">
-        <a href={url} target="_blank" rel="nofollow" class="inline-block border border-zinc-700 hover:border-zinc-400 ease-in duration-150 rounded py-3 px-5">
+        <a href={url} target="_blank" rel="nofollow" class="inline-block bg-zinc-800 hover:bg-zinc-700/50 ease-in duration-150 rounded py-3 px-5">
           <span class="flex items-center justify-center">
             <span>{url_text}</span>
             <ExternalIcon />
           </span>
         </a>
-        {github_url && <a href={github_url} target="_blank" class="ml-2 inline-block border border-zinc-700 hover:border-zinc-400 ease-in duration-150 rounded py-2 px-5">
+        {github_url && <a href={github_url} target="_blank" class="ml-2 inline-block bg-zinc-800 hover:bg-zinc-700/50 ease-in duration-150 rounded py-2 px-5">
           <GithubIcon color="#fff" />
         </a>}
       </div>
