chore: update projects layout

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -5,7 +5,7 @@ import GithubIcon from "./icons/Github.astro";
 const { img_file_name, progress, title, description, tools, url, url_text, github_url } = Astro.props;
 ---
 <section class="w-full md:w-6/12 mb-12 md:mb-6">
-  <div class="bg-zinc-900 p-5 md:mr-4 rounded-md">
+  <div class="bg-zinc-900 border-2 border-zinc-900 hover:border-zinc-700/50 transition-colors ease-in duration-150 p-5 md:mr-4 rounded-md">
     <div class="mb-5">
       <picture>
         <source type="image/webp" srcset={`/img/${img_file_name}.webp`} class="rounded-md">
@@ -18,12 +18,12 @@ const { img_file_name, progress, title, description, tools, url, url_text, githu
       <div>
         {progress && <small class={`block text-sm mb-1 font-semibold uppercase ${progress.color}`}>{progress.text}</small>}
         <h2 class="text-3xl font-clash">{title}</h2>
-        <p class="text-xl text-zinc-300">{description}</p>
+        <p class="text-xl text-zinc-300 mt-1">{description}</p>
       </div>
 
       <div class="mt-1 mb-3">
         {tools.map((tool: String, i) => {
-          return <span class="inline-block select-none py-2 mt-1 mr-1">{tool} {i !== (tools.length -1) && <span class="text-gray-600 px-3">/</span>}</span>
+          return <span class="inline-block select-none py-1 mt-1 mr-1">{tool} {i !== (tools.length -1) && <span class="text-gray-600 px-3">/</span>}</span>
         })}
       </div>
 
