feat: update projects info

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -15,10 +15,10 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="mml"
-          progress={{text: "(Pre-alpha) Web dev project", color: "text-pink-500"}}
+          progress={{text: "(Pre-alpha) Full Stack Project", color: "text-pink-500"}}
           title="MyManhwaList"
-          description="Discover Manhwa reading lists"
-          tools={['Next.js / React', 'Strapi', 'Tailwind CSS', 'Framer Motion']}
+          description="Discover new manhwa series by reading lists exchange"
+          tools={['Next.js', 'React', 'Strapi', 'Tailwind CSS', 'Framer Motion']}
           url="https://mymanhwalist-next.vercel.app"
           url_text="View Project"
           github_url="https://github.com/ricafolio/mymanhwalist-next"
@@ -37,7 +37,7 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="cbtv"
-          progress={{text: "Web dev project", color: "text-pink-500"}}
+          progress={{text: "Front-end Project", color: "text-pink-500"}}
           title="CSS Box Transform Visualizer"
           description="Simple playground to quickly generate code for CSS3 Transforms"
           tools={['React', 'SASS', 'Vite']}
@@ -52,7 +52,7 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="chef"
-          progress={{text: "Web dev project", color: "text-pink-500"}}
+          progress={{text: "Front-end Project", color: "text-pink-500"}}
           title="Chef"
           description="Responsive landing page for a chrome extension"
           tools={['HTML', 'CSS', 'jQuery', 'Jekyll']}
@@ -63,10 +63,10 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="wenmint"
-          progress={{text: "(Offline) Full Stack Web Dev Project", color: "text-red-500"}}
+          progress={{text: "(Offline) Full Stack Project", color: "text-red-500"}}
           title="Wenmint.io"
-          description="NFT Calendar"
-          tools={['Nuxt.js / Vue.js', 'Strapi', 'Discord API', 'Twitter API', 'SEO']}
+          description="Discover upcoming NFT releases"
+          tools={['Nuxt.js', 'Vue.js', 'Strapi', 'Discord API', 'Twitter API', 'SEO']}
           url="https://web.archive.org/web/20221207025634/https://wenmint.io/"
           url_text="View archived page"
           github_url={null}
@@ -85,7 +85,7 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="cult"
-          progress={{text: "(Offline) Full Stack Web Dev Project", color: "text-red-500"}}
+          progress={{text: "(Offline) Full Stack Project", color: "text-red-500"}}
           title="NFT Referral"
           description="Alt-proof referral campaign system for an NFT project, garnering 23k sign ups within 3 days"
           tools={['Nuxt.js', 'Strapi', 'Twitter OAuth']}
