--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import { Tooltips } from 'astro-tooltips';
 
 const { doIndex } = Astro.props;
 const title = "Ricafolio"
-const pageTitle = "ricafolio.me | web developer"
+const pageTitle = "ricafolio / web developer"
 const description = "Hi! 👋 I'm Rica, a web designer & developer from Philippines. Passionate about creating visually stunning and user-friendly websites."
 const url = "https://ricafolio.me"
 const fontshareUrl = "https://api.fontshare.com"
