--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -29,7 +29,7 @@ import Project from '../components/Project.astro';
           progress={{text: "Theme Design", color: "text-pink-500"}}
           title="Orangey"
           description="Warm dark theme for VSCode"
-          tools={['Visual Studio Code', 'Theme', 'Package']}
+          tools={['Visual Studio Code API', 'Package']}
           url="https://marketplace.visualstudio.com/items?itemName=ricafolio.orangey-vscode-theme"
           url_text="Download extension"
           github_url="https://github.com/ricafolio/orangey-vscode-theme"
