refactor: navbar classes

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -3,7 +3,7 @@ const { page } = Astro.props;
 ---
 <header class="flex justify-center font-satoshi font-medium text-sm sm:text-base">
   <div class="flex bg-zinc-800 rounded-b-lg">
-    <a href="/" class={"px-8 py-5 ease-linear duration-150 " + (page === 'about' ? 'text-white' : 'text-zinc-300 hover:text-white')}>About</a>
-    <a href="/projects" class={"px-8 py-5 ease-linear duration-150 " + (page === 'projects' ? 'text-white' : 'text-zinc-300 hover:text-white')}>Projects</a>
+    <a href="/" class={`px-8 py-5 ease-linear duration-150 ${page === 'about' ? 'text-white' : 'text-zinc-300 hover:text-white'}`}>About</a>
+    <a href="/projects" class={`px-8 py-5 ease-linear duration-150 ${page === 'projects' ? 'text-white' : 'text-zinc-300 hover:text-white'}`}>Projects</a>
   </div>
 </header>
