fix: project link

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -41,7 +41,7 @@ import Project from '../components/Project.astro';
           title="CSS Box Transform Visualizer"
           description="Simple playground to quickly generate code for CSS3 Transforms"
           tools={['React', 'SASS', 'Vite']}
-          url="https://github.com/ricafolio/box-transform-visualizer"
+          url="https://box-transform-visualizer.vercel.app/"
           url_text="View Project"
           github_url="https://github.com/ricafolio/box-transform-visualizer"
         />
