--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -40,7 +40,7 @@ import Project from '../components/Project.astro';
           progress={{text: "Front-end Project", color: "text-pink-500"}}
           title="CSS Box Transform Visualizer"
           description="Simple playground to quickly generate code for CSS3 Transforms"
-          tools={['React', 'SASS', 'Vite']}
+          tools={['React', 'SASS', 'Typescript', 'Vite']}
           url="https://box-transform-visualizer.vercel.app/"
           url_text="View Project"
           github_url="https://github.com/ricafolio/box-transform-visualizer"
