chore: change project info

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -15,13 +15,13 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="mml"
-          progress={{text: "(Pre-alpha) Full Stack Project", color: "text-pink-500"}}
+          progress={{text: "[Pre-alpha] Full Stack Project", color: "text-pink-500"}}
           title="MyManhwaList"
-          description="Discover new manhwa series by reading lists exchange"
-          tools={['Next.js', 'React', 'Strapi', 'Tailwind CSS', 'Framer Motion']}
+          description="Discover new manhwa series by exchanging reading lists"
+          tools={['Next.js', 'React', 'Strapi', 'Tailwind CSS']}
           url="https://mymanhwalist-next.vercel.app"
           url_text="View Project"
-          github_url="https://github.com/ricafolio/mymanhwalist-next"
+          github_url={null}
         />
 
         <Project
