chore: change brackets

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -63,7 +63,7 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="wenmint"
-          progress={{text: "(Offline) Full Stack Project", color: "text-red-500"}}
+          progress={{text: "[Offline] Full Stack Project", color: "text-red-500"}}
           title="Wenmint.io"
           description="Discover upcoming NFT releases"
           tools={['Nuxt.js', 'Vue.js', 'Strapi', 'Discord API', 'Twitter API', 'SEO']}
@@ -74,7 +74,7 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="bot"
-          progress={{text: "(Offline) Bot Project", color: "text-red-500"}}
+          progress={{text: "[Offline] Bot Project", color: "text-red-500"}}
           title="Premint Links Discord Bot"
           description="Bot that scrapes latest premint links shared across Twitter, used by 300+ Discord servers"
           tools={['Discord.js', 'Node.js', 'Twitter API']}
@@ -85,7 +85,7 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="cult"
-          progress={{text: "(Offline) Full Stack Project", color: "text-red-500"}}
+          progress={{text: "[Offline] Full Stack Project", color: "text-red-500"}}
           title="NFT Referral"
           description="Alt-proof referral campaign system for an NFT project, garnering 23k sign ups within 3 days"
           tools={['Nuxt.js', 'Strapi', 'Twitter OAuth']}
