chore: rephrase descriptions

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -17,7 +17,7 @@ import Project from '../components/Project.astro';
           img_file_name="mml"
           progress={{text: "[Pre-alpha] Full Stack Project", color: "text-pink-500"}}
           title="MyManhwaList"
-          description="Discover new manhwa series by exchanging reading lists"
+          description="Manhwa reading lists exchange community"
           tools={['Next.js', 'React', 'Strapi', 'Tailwind CSS']}
           url="https://mymanhwalist-next.vercel.app"
           url_text="View Project"
@@ -65,7 +65,7 @@ import Project from '../components/Project.astro';
           img_file_name="wenmint"
           progress={{text: "[Offline] Full Stack Project", color: "text-red-500"}}
           title="Wenmint.io"
-          description="Discover upcoming NFT releases"
+          description="A community to keep track of upcoming NFT launch dates"
           tools={['Nuxt.js', 'Vue.js', 'Strapi', 'Discord API', 'Twitter API', 'SEO']}
           url="https://web.archive.org/web/20221207025634/https://wenmint.io/"
           url_text="View archived page"
@@ -76,7 +76,7 @@ import Project from '../components/Project.astro';
           img_file_name="bot"
           progress={{text: "[Offline] Bot Project", color: "text-red-500"}}
           title="Premint Links Discord Bot"
-          description="Bot that scrapes latest premint links shared across Twitter, used by 300+ Discord servers"
+          description="A bot utilized by over 300 discord servers that extracts the most recent premint links shared on Twitter."
           tools={['Discord.js', 'Node.js', 'Twitter API']}
           url="https://top.gg/bot/1006311461175443526"
           url_text="View archived page"
@@ -87,7 +87,7 @@ import Project from '../components/Project.astro';
           img_file_name="cult"
           progress={{text: "[Offline] Full Stack Project", color: "text-red-500"}}
           title="NFT Referral"
-          description="Alt-proof referral campaign system for an NFT project, garnering 23k sign ups within 3 days"
+          description="An alt-resistant referral campaign implemented for an NFT project, attracting 23,000 registrations in just three days."
           tools={['Nuxt.js', 'Strapi', 'Twitter OAuth']}
           url="https://twitter.com/search?q=cultofeth.xyz&src=typed_query&f=live"
           url_text="View campaign results"
