--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -15,7 +15,7 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="mml"
-          progress={{text: "[Pre-alpha] Full Stack Project", color: "text-pink-500"}}
+          progress={{text: "[Pre-alpha] Full Stack Project", color: "text-orange-500"}}
           title="MyManhwaList"
           description="Manhwa reading lists exchange community"
           tools={['Next.js', 'React', 'Strapi', 'Tailwind CSS']}
@@ -26,7 +26,7 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="orangey"
-          progress={{text: "Theme Design", color: "text-pink-500"}}
+          progress={{text: "Theme Design", color: "text-orange-500"}}
           title="Orangey"
           description="Warm dark theme for VSCode"
           tools={['Visual Studio Code API', 'Package']}
@@ -37,7 +37,7 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="cbtv"
-          progress={{text: "Front-end Project", color: "text-pink-500"}}
+          progress={{text: "Front-end Project", color: "text-orange-500"}}
           title="CSS Box Transform Visualizer"
           description="Simple playground to quickly generate code for CSS3 Transforms"
           tools={['React', 'SASS', 'Typescript', 'Vite']}
@@ -52,7 +52,7 @@ import Project from '../components/Project.astro';
 
         <Project
           img_file_name="chef"
-          progress={{text: "Front-end Project", color: "text-pink-500"}}
+          progress={{text: "Front-end Project", color: "text-orange-500"}}
           title="Chef"
           description="Responsive landing page for a chrome extension"
           tools={['HTML', 'CSS', 'jQuery', 'Jekyll']}
