chore: fix capitalization

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -20,7 +20,7 @@ import Project from '../components/Project.astro';
           description="Manhwa reading lists exchange community"
           tools={['Next.js', 'React', 'Strapi', 'Tailwind CSS']}
           url="https://mymanhwalist-next.vercel.app"
-          url_text="View Project"
+          url_text="View project"
           github_url={null}
         />
 
@@ -42,7 +42,7 @@ import Project from '../components/Project.astro';
           description="Simple playground to quickly generate code for CSS3 Transforms"
           tools={['React', 'SASS', 'Typescript', 'Vite']}
           url="https://box-transform-visualizer.vercel.app/"
-          url_text="View Project"
+          url_text="View project"
           github_url="https://github.com/ricafolio/box-transform-visualizer"
         />
 			</div>
@@ -57,7 +57,7 @@ import Project from '../components/Project.astro';
           description="Responsive landing page for a chrome extension"
           tools={['HTML', 'CSS', 'jQuery', 'Jekyll']}
           url="https://usechef.com/"
-          url_text="View Project"
+          url_text="View project"
           github_url={null}
         />
 
