--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -76,7 +76,7 @@ import Project from '../components/Project.astro';
           img_file_name="bot"
           progress={{text: "[Offline] Bot Project", color: "text-red-500"}}
           title="Premint Links Discord Bot"
-          description="A bot utilized by over 300 discord servers that extracts the most recent premint links shared on Twitter."
+          description="A bot used by over 300 discord servers that extracts the most recent premint links shared on Twitter."
           tools={['Discord.js', 'Node.js', 'Twitter API']}
           url="https://top.gg/bot/1006311461175443526"
           url_text="View archived page"
