chore: use lighter font weight

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -17,7 +17,7 @@ const { img_file_name, progress, title, description, tools, url, url_text, githu
     <div class="flex flex-col justify-center">
       <div>
         {progress && <small class={`block text-sm mb-1 font-semibold uppercase ${progress.color}`}>{progress.text}</small>}
-        <h2 class="text-3xl font-clash">{title}</h2>
+        <h2 class="text-3xl font-medium font-clash">{title}</h2>
         <p class="text-xl text-zinc-300 mt-1">{description}</p>
       </div>
 
