--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,7 +11,7 @@ import Project from '../components/Project.astro';
     <!-- BODY -->
 		<main class="container mx-auto flex flex-col mt-16 px-4 md:px-12">
 			<div class="mx-auto flex flex-row flex-wrap align-center mb-8 md:mb-32">
-				<h1 class="w-full text-4xl font-clash mb-6">Personal Projects</h1>
+				<h1 class="w-full text-4xl font-semibold font-clash mb-6">Personal Projects</h1>
 
         <Project
           img_file_name="mml"
@@ -48,7 +48,7 @@ import Project from '../components/Project.astro';
 			</div>
 
       <div class="mx-auto flex flex-row flex-wrap align-center mb-8 md:mb-32">
-				<h1 class="w-full text-4xl font-clash mb-6">Client Solo Projects</h1>
+				<h1 class="w-full text-4xl font-semibold font-clash mb-6">Client Solo Projects</h1>
 
         <Project
           img_file_name="chef"
