chore: change primary color to orange

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,7 +59,7 @@ const fontshareUrl = "https://api.fontshare.com"
     preset: "firefly",
 		particles: {
 			color: {
-				value: "#f9c7ffa3"
+				value: "#ff7d5e"
 			}
 		}
   })
@@ -84,7 +84,9 @@ const fontshareUrl = "https://api.fontshare.com"
 	}
 	.gradient-text {
 		margin: 0;
-		background: radial-gradient(104.58% 104.45% at 18.91% 52.2%, rgba(255, 199, 0, 0.2) 0%, rgba(255, 199, 0, 0) 100%), radial-gradient(96.22% 70.96% at 70.08% 82.42%, rgba(130, 4, 255, 0.2) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(110.73% 50% at 50% 0%, #FD8AFF 0%, rgba(255, 255, 255, 0) 100%), #FFFBF4;
+		background: radial-gradient(104.58% 104.45% at 18.91% 52.2%, rgba(255, 199, 0, 0.2) 0%, rgba(255, 199, 0, 0) 100%),
+			radial-gradient(96.22% 70.96% at 70.08% 82.42%, rgba(255, 4, 4, 0.2) 0%, rgba(0, 0, 0, 0) 100%), 
+			radial-gradient(110.73% 50% at 50% 0%, #FF3100 0%, rgba(255, 255, 255, 0) 100%), #FFFBF4;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
 	}
