chore: change url

--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -19,7 +19,7 @@ import TwitchIcon from './icons/Twitch.astro';
     <a href="https://dribbble.com/notrica" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="Dribbble">
       <DribbbleIcon />
     </a>
-    <a href="https://www.twitch.tv/thejyuviole/videos?category=1469308723&filter=archives&sort=time" target="_blank" class="link-button" rel="noopener noreferrer" title="Watch my software development streams ;)">
+    <a href="https://www.twitch.tv/devwithrica/videos?category=1469308723&filter=archives&sort=time" target="_blank" class="link-button" rel="noopener noreferrer" title="Watch my software development streams ;)">
       <TwitchIcon />
     </a>
   </div>
