--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,13 +37,15 @@ const fontshareUrl = "https://api.fontshare.com"
 	<body >
 		<slot />
 		<div id="tsparticles"></div>
-		<script type="text/plain">
-	┏━━━┓╋╋╋╋╋╋╋┏━┓╋╋┏┓
-	┃┏━┓┃╋╋╋╋╋╋╋┃┏┛╋╋┃┃ ^__^
-	┃┗━┛┣┳━━┳━━┳┛┗┳━━┫┃┏┳━━┓
-	┃┏┓┏╋┫┏━┫┏┓┣┓┏┫┏┓┃┃┣┫┏┓┃
-	┃┃┃┗┫┃┗━┫┏┓┃┃┃┃┗┛┃┗┫┃┗┛┃
-	┗┛┗━┻┻━━┻┛┗┛┗┛┗━━┻━┻┻━━┛
+		<script type="text/javascript">
+			console.log(`
+				┏━━━┓╋╋╋╋╋╋╋┏━┓╋╋┏┓
+				┃┏━┓┃╋╋╋╋╋╋╋┃┏┛╋╋┃┃ ^__^
+				┃┗━┛┣┳━━┳━━┳┛┗┳━━┫┃┏┳━━┓
+				┃┏┓┏╋┫┏━┫┏┓┣┓┏┫┏┓┃┃┣┫┏┓┃
+				┃┃┃┗┫┃┗━┫┏┓┃┃┃┃┗┛┃┗┫┃┗┛┃
+				┗┛┗━┻┻━━┻┛┗┛┗┛┗━━┻━┻┻━━┛
+			`)
 		</script>
 	</body>
 </html>
