--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -39,8 +39,10 @@ import TwitchIcon from './icons/Twitch.astro';
     align-items: center;
     width: 3.5em;
     height: 3.5em;
-    background-color: #fff;
-    box-shadow: 0px 1px 9px #78555585, inset 0px 0px 7px #80808054;
-    border-radius: 12px;
+    background: transparent;
+    border: 2px solid black;
+    box-shadow: 3px 5px black;
+    border-radius: 8px;
+    background-color: #fff7ed;
   }
 </style>
