--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,7 @@ const fontshareUrl = "https://api.fontshare.com"
 		<Tooltips interactive={false} delay={[1, 10]} placement="top" />
 		<title>{pageTitle}</title>
 	</head>
-	<body >
+	<body>
 		<slot />
 		<script type="text/javascript">
 			console.log(`
@@ -51,26 +51,19 @@ const fontshareUrl = "https://api.fontshare.com"
 
 <style is:global>
 	::selection {
-		background-color: #ffffff45;
+		background-color: #3cff00b5;
 	}
-	html {
+	body {
 		font-family: 'Satoshi', sans-serif;
-		background-color: #000;
+		min-height: 100vh;
 	}
   .tippy-box[data-theme='default'] {
-    background-color: rgb(177, 177, 177) !important;
-    color: #000 !important;
-    font-family: sans-serif !important;
+    font-family: 'Satoshi', sans-serif;
+		font-weight: bold;
+		background-color: #000;
+		color: #fff;
   }
 	.tippy-arrow {
-    color: rgb(177, 177, 177) !important;
-	}
-	.gradient-text {
-		margin: 0;
-		background: radial-gradient(104.58% 104.45% at 18.91% 52.2%, rgba(255, 199, 0, 0.2) 0%, rgba(255, 199, 0, 0) 100%),
-			radial-gradient(96.22% 70.96% at 70.08% 82.42%, rgba(255, 4, 4, 0.2) 0%, rgba(0, 0, 0, 0) 100%), 
-			radial-gradient(110.73% 50% at 50% 0%, #FF3100 0%, rgba(255, 255, 255, 0) 100%), #FFFBF4;
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
+    color: #000;
 	}
 </style>
