--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,8 +2,8 @@
 const { page } = Astro.props;
 ---
 <header class="flex justify-center font-satoshi font-medium text-sm sm:text-base">
-  <div class="flex bg-zinc-800 rounded-b-lg">
-    <a href="/" class={`px-8 py-5 ease-linear duration-150 ${page === 'about' ? 'text-white' : 'text-zinc-300 hover:text-white'}`}>About</a>
-    <a href="/projects" class={`px-8 py-5 ease-linear duration-150 ${page === 'projects' ? 'text-white' : 'text-zinc-300 hover:text-white'}`}>Projects</a>
+  <div class="flex border-2 border-zinc-800 bg-amber-50 drop-shadow-[0_2px_#000] rounded-full">
+    <a href="/" class={`px-8 py-5 ease-linear ${page === 'about' ? 'text-black font-bold' : 'text-zinc-600 hover:text-black'}`}>About</a>
+    <a href="/projects" class={`px-8 py-5 ease-linear ${page === 'projects' ? 'text-black font-bold' : 'text-zinc-600 hover:text-black'}`}>Projects</a>
   </div>
 </header>
