--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,9 +1,11 @@
 ---
 const { page } = Astro.props;
+const active = "font-bold text-black active:text-zinc-800 focus:text-zinc-900"
+const inactive = "text-zinc-600 hover:text-black active:text-zinc-800 focus:text-zinc-900"
 ---
 <header class="flex justify-center font-satoshi font-medium text-sm sm:text-base">
-  <div class="flex border-2 border-zinc-800 bg-amber-50 drop-shadow-[0_2px_#000] rounded-full">
-    <a href="/" class={`px-8 py-5 ease-linear ${page === 'about' ? 'text-black font-bold' : 'text-zinc-600 hover:text-black'}`}>About</a>
-    <a href="/projects" class={`px-8 py-5 ease-linear ${page === 'projects' ? 'text-black font-bold' : 'text-zinc-600 hover:text-black'}`}>Projects</a>
+  <div class="flex border-2 border-zinc-800 bg-amber-50 drop-shadow-[0px_5px_#000] rounded-full">
+    <a href="/" class={`px-8 py-5 ease rounded-l-full ${page === 'about' ? active : inactive}`}>About</a>
+    <a href="/projects" class={`px-8 py-5 ease rounded-r-full ${page === 'projects' ? active : inactive}`}>Projects</a>
   </div>
 </header>
