--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,15 +5,34 @@ import NavBar from '../components/NavBar.astro';
 ---
 
 <Layout doIndex={true}>
-	<div class="text-white">
+	<div class="relative text-black">
 		<NavBar page="about" />
 
-		<main class="container mx-auto flex flex-col justify-evenly h-80">
-			<div class="w-5/6 sm:w-3/6 mx-auto flex justify-center align-center">
-				<h1 class="text-5xl lg:text-6xl font-semibold font-clash">Hello, I'm <span class="gradient-text">Rica</span>, a web developer based in Philippines.</h1>
+		<main class="container mx-auto flex flex-col justify-evenly min-h-[77vh]">
+			<div class="w-5/6 sm:w-3/6 mx-auto flex flex-col justify-center align-center">
+				<h1 class="text-4xl sm:text-5xl lg:text-6xl font-semibold font-clash uppercase mb-2">
+					Hello! I'm <span class="styled-text"><span>Rica</span></span>,
+					<span class="block">A web developer based in Philippines.</span>
+				</h1>
 			</div>
 		</main>
 
 		<LinkBar />
 	</div>
 </Layout>
+
+<style>
+	body {
+		background: linear-gradient(0deg, #56ff00, #fffbeb 200px);
+	}
+	.styled-text {
+		display: inline-block;
+		background-color: #56ff00;
+		/* transform: skew(-10deg, 0deg); */
+		padding: 0 8px 0 12px;
+	}
+	.styled-text span {
+		display: inline-block;
+		/* transform: skew(-15deg, 0deg); */
+	}
+</style>
