fix: page title

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,7 +4,7 @@ import NavBar from '../components/NavBar.astro';
 import Project from '../components/Project.astro';
 ---
 
-<Layout doIndex={false}>
+<Layout doIndex={false} title="ricafolio &middot; projects">
 	<div class="text-black">
     <NavBar page="projects" />
 
