--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,7 @@
 ---
 import { Tooltips } from 'astro-tooltips';
 
-const { doIndex } = Astro.props;
-const title = "Ricafolio"
-const pageTitle = "ricafolio / web developer"
+const { title = "ricafolio &middot; web developer", doIndex } = Astro.props;
 const description = "Hi! 👋 I'm Rica, a web designer & developer from Philippines. Passionate about creating visually stunning and user-friendly websites."
 const url = "https://ricafolio.me"
 const fontshareUrl = "https://api.fontshare.com"
@@ -32,7 +30,7 @@ const fontshareUrl = "https://api.fontshare.com"
 		<link rel="dns-prefetch" href={fontshareUrl} />
 		<link href="https://api.fontshare.com/v2/css?f[]=clash-display@600,500&f[]=satoshi@700,500,400&display=swap" rel="stylesheet">
 		<Tooltips interactive={false} delay={[1, 10]} placement="top" />
-		<title>{pageTitle}</title>
+		<title>{title}</title>
 	</head>
 	<body>
 		<slot />
