fix: description props

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,11 @@
 ---
 import { Tooltips } from 'astro-tooltips';
 
-const { title = "ricafolio &middot; web developer", doIndex } = Astro.props;
-const description = "Hi! 👋 I'm Rica, a web designer & developer from Philippines. Passionate about creating visually stunning and user-friendly websites."
+const { 
+	title = "ricafolio &middot; web developer", 
+	description = "Hi! 👋 I'm Rica, a web designer & developer from Philippines. Passionate about creating visually stunning and user-friendly websites.",
+	doIndex 
+} = Astro.props;
 const url = "https://ricafolio.me"
 const fontshareUrl = "https://api.fontshare.com"
 ---
