--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,7 +4,11 @@ import NavBar from '../components/NavBar.astro';
 import Project from '../components/Project.astro';
 ---
 
-<Layout doIndex={false} title="ricafolio &middot; projects">
+<Layout 
+  title="ricafolio &middot; projects"
+  description="The collection of projects I worked on / I'm working on."
+  doIndex={false}
+>
 	<div class="text-black">
     <NavBar page="projects" />
 
