chore: add theme-color

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const fontshareUrl = "https://api.fontshare.com"
 		{doIndex && <meta name="robots" content="noindex">}
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="theme-color" content="#000" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="title" content={title}>
 		<meta name="description" content={description}>
