--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,8 @@ import NavBar from '../components/NavBar.astro';
 	<div class="relative text-black">
 		<NavBar page="about" />
 
-		<main class="container mx-auto flex flex-col justify-evenly min-h-[77vh]">
+
+		<main class="container mx-auto flex flex-col justify-evenly min-h-[77vh] overflow-hidden">
 			<div class="w-5/6 sm:w-3/6 mx-auto flex flex-col justify-center align-center">
 				<h1 class="text-4xl sm:text-5xl lg:text-6xl font-semibold font-clash uppercase mb-2">
 					Hello! I'm <span class="styled-text border-2 sm:border-3 px-1 sm:px-3">Rica</span>,
