--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,7 +5,7 @@ import Project from '../components/Project.astro';
 ---
 
 <Layout 
-  title="ricafolio &middot; projects"
+  title="ricafolio · projects"
   description="The collection of projects I worked on / I'm working on."
   doIndex={false}
 >
