--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import { Tooltips } from 'astro-tooltips';
 
 const { 
-	title = "ricafolio &middot; web developer", 
+	title = "ricafolio · web developer", 
 	description = "Hi! 👋 I'm Rica, a web designer & developer from Philippines. Passionate about creating visually stunning and user-friendly websites.",
 	doIndex 
 } = Astro.props;
