chore: use swup

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,8 @@ import NavBar from '../components/NavBar.astro';
 ---
 
 <Layout doIndex={true}>
-	<div class="relative text-black">
+	<div id="swup" class="transition-fade relative text-black">
 		<NavBar page="about" />
-
 
 		<main class="container mx-auto flex flex-col justify-evenly min-h-[77vh] overflow-hidden">
 			<div class="w-5/6 sm:w-3/6 mx-auto flex flex-col justify-center align-center">
