--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,7 +9,7 @@ import Project from '../components/Project.astro';
   description="The collection of projects I worked on / I'm working on."
   doIndex={false}
 >
-	<div class="text-black">
+	<div id="swup" class="transition-fade text-black">
     <NavBar page="projects" />
 
 		<main class="container mx-auto flex flex-col mt-16 px-4 md:px-12">
