--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -1,38 +1,34 @@
 ---
-import LinkedInIcon from './icons/LinkedIn.astro';
-import GithubIcon from './icons/Github.astro';
-import VSCOIcon from './icons/VSCO.astro';
-import DribbbleIcon from './icons/Dribbble.astro';
-import TwitchIcon from './icons/Twitch.astro';
+import LinkedInIcon from "./icons/LinkedIn.astro"
+import GithubIcon from "./icons/Github.astro"
+import VSCOIcon from "./icons/VSCO.astro"
+import DribbbleIcon from "./icons/Dribbble.astro"
+import TwitchIcon from "./icons/Twitch.astro"
 ---
+
 <div class="flex justify-center align-center">
-  <div class="link-bar">
-    <a href="https://www.linkedin.com/in/ricafolio/" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="LinkedIn">
+  <div class="link-bar flex justify-center py-3">
+    <a href="https://www.linkedin.com/in/ricafolio/" target="_blank" class="link-button mr-2" rel="noopener noreferrer" data-tooltip-text="LinkedIn">
       <LinkedInIcon />
     </a>
-    <a href="https://github.com/ricafolio" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="Github">
+    <a href="https://github.com/ricafolio" target="_blank" class="link-button mr-2" rel="noopener noreferrer" data-tooltip-text="Github">
       <GithubIcon />
     </a>
-    <a href="https://vsco.co/zz-rica/gallery" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="Photography">
+    <a href="https://vsco.co/zz-rica/gallery" target="_blank" class="link-button mr-2" rel="noopener noreferrer" data-tooltip-text="Photography">
       <VSCOIcon />
     </a>
-    <a href="https://dribbble.com/notrica" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="Dribbble">
+    <a href="https://dribbble.com/notrica" target="_blank" class="link-button mr-2" rel="noopener noreferrer" data-tooltip-text="Dribbble">
       <DribbbleIcon />
     </a>
-    <a href="https://www.twitch.tv/devwithrica/videos?category=1469308723&filter=archives&sort=time" target="_blank" class="link-button" rel="noopener noreferrer" title="Watch my software development streams ;)">
+    <a href="https://www.twitch.tv/devwithrica/videos?category=1469308723&filter=archives&sort=time" target="_blank" class="link-button" rel="noopener noreferrer" data-tooltip-text="Watch my software development streams ;)">
       <TwitchIcon />
     </a>
   </div>
 </div>
 
 <style>
-  .link-bar {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-  }
   .link-button {
-		display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 3.5em;
@@ -42,5 +38,50 @@ import TwitchIcon from './icons/Twitch.astro';
     box-shadow: 3px 5px black;
     border-radius: 8px;
     background-color: #fff7ed;
+    position: relative;
+  }
+  /* Tooltip bottom tip */
+  .link-button::before {
+    position: absolute;
+    content: " ";
+    background-color: #010101;
+    width: 1rem;
+    height: 1rem;
+    z-index: 50;
+    opacity: 0;
+    transition: all cubic-bezier(0.17, 0.67, 0.5, 0.71) 80ms;
+    pointer-events: none;
+  }
+  /* Tooltip containing text */
+  .link-button::after {
+    content: attr(data-tooltip-text);
+    z-index: 50;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    background-color: #010101;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    opacity: 0;
+    transition: all cubic-bezier(0.17, 0.67, 0.5, 0.71) 80ms;
+    pointer-events: none;
+    height: 30px;
+    padding: 0 0.6rem;
+    border-radius: 5px;
+  }
+  .link-button:hover::before,
+  .link-button:hover::after {
+    opacity: 1;
+  }
+  .link-button:hover::before {
+    transform: translate(-20%, calc(-100% - 28px)) rotate(45deg);
+  }
+  .link-button:hover::after {
+    transform: translate(-50%, calc(-100% - 15px));
   }
 </style>
