--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,16 @@
 import Layout from '../layouts/Layout.astro';
 import LinkBar from '../components/LinkBar.astro';
 import NavBar from '../components/NavBar.astro';
+import LongStrip from '../components/LongStrip.astro';
 ---
 
 <Layout doIndex={true}>
 	<div id="swup" class="full-screen relative text-black">
 		<NavBar page="about" />
+		<LongStrip />
 
 		<main class="container mx-auto flex flex-col justify-evenly min-h-[77vh] overflow-hidden">
-			<div class="w-5/6 sm:w-3/6 mx-auto flex flex-col justify-center align-center">
+			<div class="w-full sm:w-4/6 lg:w-3/6 pl-12 pr-3 sm:px-0 mx-auto flex flex-col justify-center align-center">
 				<h1 class="text-4xl sm:text-5xl lg:text-6xl font-semibold font-clash uppercase mb-2">
 					Hello! I'm <span class="styled-text border-2 sm:border-3 px-1 sm:px-3">Rica</span>,
 					<span class="block">A web developer based in Philippines.</span>
