fix: title size in mobile

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -14,7 +14,7 @@ import Project from '../components/Project.astro';
 
 		<main class="container mx-auto flex flex-col mt-16 px-4 md:px-12">
 			<div class="mx-auto flex flex-row flex-wrap align-center mb-8 md:mb-32">
-				<h1 class="w-full text-4xl font-semibold font-clash mb-6 uppercase">Personal projects</h1>
+				<h1 class="w-full text-3xl sm:text-4xl font-semibold font-clash mb-6 uppercase">Personal projects</h1>
 
         <Project
           img_file_name="mml"
@@ -51,7 +51,7 @@ import Project from '../components/Project.astro';
 			</div>
 
       <div class="mx-auto flex flex-row flex-wrap align-center mb-8 md:mb-32">
-				<h2 class="w-full text-4xl font-semibold font-clash mb-6 uppercase">Solo projects for clients</h2>
+				<h2 class="w-full text-3xl sm:text-4xl font-semibold font-clash mb-6 uppercase">Solo projects for clients</h2>
 
         <Project
           img_file_name="chef"
