--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -20,7 +20,7 @@ import TwitchIcon from "./icons/Twitch.astro"
     <a href="https://dribbble.com/notrica" target="_blank" class="link-button mr-2" rel="noopener noreferrer" data-tooltip-text="Dribbble">
       <DribbbleIcon />
     </a>
-    <a href="https://www.twitch.tv/devwithrica/videos?category=1469308723&filter=archives&sort=time" target="_blank" class="link-button" rel="noopener noreferrer" data-tooltip-text="Watch my software development streams ;)">
+    <a href="https://www.twitch.tv/devwithrica/videos?category=1469308723&filter=archives&sort=time" target="_blank" class="link-button" rel="noopener noreferrer" data-tooltip-text="Twitch">
       <TwitchIcon />
     </a>
   </div>
