--- a/src/components/LongStrip.astro
+++ b/src/components/LongStrip.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<div class="long-strip absolute left-0 top-0 bg-black text-white overflow-hidden flex flex-col items-center justify-center">
+<div class="long-strip bg-black text-white overflow-hidden flex flex-col items-center justify-center">
   <div class="long-strip-ticker">
     {
       [...Array(5)].map((i) => (
@@ -15,9 +15,7 @@
 
 <style>
   .long-strip {
-    max-width: 4rem;
     height: 100vh;
-    z-index: 5;
     overflow: hidden;
   }
   .long-strip-ticker {
